--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
-
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
 }
